<resources>
    <string name="app_name">Calvin Assassin</string>
    <string name="action_settings">Settings</string>

    <!-- Strings related to Menu Drawer -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- Strings related to Main Activity -->
    <string name="eliniate_button">I ELIMINATED MY TARGET</string>
    <string name="last_seen">Target last seen: </string>
    <string name="main_activity_title">Target</string>
    <string name="targetName">Javin Unger</string>

    <!-- Strings related to Profile Activity -->
    <string name="profile_activity_title">Profile</string>
    <string name="profile_activity_description">Information about you.</string>
    <string name="choose_photo_button">Choose Photo</string>
    <string name="user_name_label">Player name: </string>
    <string name="user_name">Full Name</string>
    <string name="user_year_label">Player class: </string>
    <string name="user_home_label">Residence: </string>
    <string name="finalize_button">FINALIZE</string>
    <string name="finalize_message">You will not be able to change you profile after finalizing. Continue?</string>
    <string-array name="class_array">
        <item>Freshman</item>
        <item>Sophomore</item>
        <item>Junior</item>
        <item>Senior</item>
        <item>Other</item>
    </string-array>
    <string-array name="home_array">
        <item>KHvR</item>
        <item>BB</item>
        <item>NVW</item>
        <item>BHT</item>
        <item>RVD</item>
        <item>SE</item>
        <item>BV</item>
        <item>KE</item>
        <item>Off Campus</item>
    </string-array>

    <!-- Strings related to Map Activity-->
    <string name="title_activity_gpsmap">Map</string>

    <!-- Strings related to Standings Activity -->
    <string name="standings_activity_title">Standings</string>

    <!-- Strings related to Game Selection Activity -->
    <string name="join_game_title">Upcoming Games:</string>
    <string name="join_game_description">Press a game to join it! You can only participate in one game at a time.</string>
    <string name="active_game_title">Active Games:</string>
    <string name="active_game_description">These games are currently in progress. You cannot join them.</string>
    <string name="join_confirm_message">Join this upcoming game? You can leave if you change your mind.</string>
    <string name="leave_confirm_message">Leave this game? You wont be able to rejoin after it starts!</string>

    <!-- Strings related to Settings -->
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to help pages -->
    <string name="help_title">Help</string>
    <string name="action_help">Help</string>
    <string name="target_help">this is the help text for the target page</string>
    <string name="profile_help">this is the help text for the profile page</string>
    <string name="map_help">this is the help text for the map page</string>
    <string name="standings_help">this is the help text for the standings page</string>
    <string name="game_select_help">this is the help text for the game select page</string>


    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_assassination_alert_label">Assassination</string>
    <string name="pref_assassin_prox_alert_label">Assassin Proximity</string>
    <string name="pref_time_limit_alert_label">Time Limit</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="title_activity_topic">TopicActivity</string>
</resources>
