<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/upcomingTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/join_game_title"
            android:textSize="28sp"/>
        <TextView
            android:id="@+id/upcomingDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/upcomingTitle"
            android:text="@string/join_game_description"
            android:textSize="12sp"/>
        <ListView
            android:id="@+id/upcomingList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".5"
            android:layout_below="@id/upcomingDescription">
        </ListView>

        <TextView
            android:id="@+id/activeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/upcomingList"
            android:text="@string/active_game_title"
            android:textSize="28sp"/>
        <TextView
            android:id="@+id/activeDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/activeTitle"
            android:text="@string/active_game_description"
            android:textSize="12sp"/>
        <ListView
            android:id="@+id/activeList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".5"
            android:layout_below="@id/activeDescription">
        </ListView>

    </LinearLayout>

    <!-- Side navigation drawer UI -->
    <ListView
        android:id="@+id/navList"
        android:layout_width="200dp"
        android:background="#666"
        android:layout_height="match_parent"
        android:layout_gravity="left|start"/>

</android.support.v4.widget.DrawerLayout>