<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:label="Profile">

    <!-- The first child in the layout is for the main Activity UI-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".MainActivity"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_activity_description"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <ImageView
            android:layout_marginTop="50dp"
            android:layout_width="175dp"
            android:layout_height="175dp"
            app:srcCompat="@mipmap/ic_profile_placeholder"
            android:id="@+id/profile_picture"
            android:layout_centerHorizontal="true" />

        <Button
            android:text="Choose Photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_picture"
            android:layout_centerHorizontal="true"
            android:id="@+id/choose_photo_button" />

        <TextView
            android:text="@string/user_name_label"
            android:selectAllOnFocus="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/player_name_label"
            android:layout_below="@+id/choose_photo_button"
            android:layout_marginTop="24dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/user_name"
            android:ems="10"
            android:id="@+id/player_name_editable"
            android:textAlignment="center"
            android:layout_alignBaseline="@+id/player_name_label"
            android:layout_centerHorizontal="true" />

        <TextView
            android:text="@string/user_year_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/player_class_label"
            android:layout_below="@+id/player_name_label"
            android:layout_marginTop="24dp"
            android:layout_alignStart="@+id/player_name_label"
            android:textAlignment="center" />

        <Spinner
            android:id="@+id/player_class_editable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/player_class_label"
            android:layout_marginTop="24dp"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/player_home_label"
            android:text="@string/user_home_label"
            android:layout_below="@+id/player_class_label"
            android:layout_marginTop="24dp"
            android:layout_alignStart="@+id/player_class_label" />

        <Spinner
            android:id="@+id/player_home_editable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/player_home_label"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"/>

        <Button
            android:text="FINALIZE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/player_home_editable"
            android:layout_marginTop="32dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/finalize_profile_button"/>


    </RelativeLayout>

    <!-- Side navigation drawer UI -->
    <ListView
        android:id="@+id/navList"
        android:layout_width="200dp"
        android:background="#666"
        android:layout_height="match_parent"
        android:layout_gravity="left|start"/>

</android.support.v4.widget.DrawerLayout>